# vibelife

./: .env.example  .gitignore  CHANGELOG.md  README.md  package.json  tsconfig.json  webpack.config.js
src/frontend/: App.css  App.tsx  index.html
src/frontend/components/: ControlPanel.tsx  SimulationRenderer.tsx
src/frontend/stores/: simulationStore.ts
src/simulation/: core.test.ts  core.ts
src/simulation/rust/: Cargo.toml  README.md
src/simulation/rust/pkg/: index.d.ts
src/simulation/rust/src/: lib.rs
