[package]
name = "vibelife-sim"
version = "0.1.0"
edition = "2021"
authors = ["VibeLife Team"]
description = "High-performance simulation engine for VibeLife evolutionary simulator"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
console_error_panic_hook = { version = "0.1.7", optional = true }
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 